--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -2,15 +2,24 @@
 <html lang="en">
     <head>
         <title>AirBnB clone</title>
-        <link rel="stylesheet" href="styles/3-common.css">
+        <link rel="stylesheet" href="styles/4-common.css">
         <link rel="stylesheet" href="styles/3-footer.css">
         <link rel="stylesheet" href="styles/3-header.css">
+	<link rel="stylesheet" href="styles/4-filters.css">
 	<link rel="tab icon" href="images/icon.png">
     </head>
     <body>
+
         <header>
             <div class="icon"></div>
         </header>
+
+        <div class="container">
+            <section class="filters">
+                <button>Search</button>
+            </section>
+        </div>
+
         <footer>Best School</footer>
     </body>
 </html>
